[package]
name = "tests"
version = "0.0.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
documentation = "https://docs.rs/musli"
readme = "README.md"
homepage = "https://github.com/udoprog/musli"
repository = "https://github.com/udoprog/musli"
license = "MIT OR Apache-2.0"
publish = false

[features]
default = ["std"]
extra = ["rkyv", "dlhn", "bitcode", "serde_cbor"]
full = ["rmp-serde", "bincode", "postcard", "musli-json", "serde_json"]
text = ["musli-json", "serde_json"]
std = ["alloc", "musli?/std", "musli-wire?/std", "musli-storage?/std", "musli-json?/std", "musli-zerocopy?/std", "rand/std", "serde_json?/std", "rkyv?/std", "serde?/std"]
alloc = ["musli?/alloc", "musli-wire?/alloc", "musli-storage?/alloc", "musli-json?/alloc", "musli-zerocopy?/alloc"]
simdutf8 = ["musli-wire?/simdutf8", "musli-storage?/simdutf8", "musli-descriptive?/simdutf8", "musli-json?/simdutf8"]
parse-full = ["musli-json?/parse-full"]
musli-wire = ["musli", "dep:musli-wire", "simdutf8"]
musli-descriptive = ["musli", "dep:musli-descriptive", "simdutf8"]
musli-storage = ["musli", "dep:musli-storage", "simdutf8"]
musli-json = ["musli", "dep:musli-json", "simdutf8"]
musli-value = ["musli", "dep:musli-value"]
musli-zerocopy = ["dep:musli-zerocopy"]
# skips rt benchmarks
no-rt = []
test = ["musli", "musli-wire", "musli-storage", "musli-descriptive", "musli-value", "musli-json"]

model-no-usize = []
model-no-cstring = []
model-no-map = ["model-no-map-string-key"]
model-no-map-string-key = []
model-no-vec = []
model-no-tuple = []
model-no-128 = []

serde = ["dep:serde", "bitcode?/serde", "std"]
serde_json = ["dep:serde_json", "serde", "std"]
bincode = ["dep:bincode", "serde"]
rmp-serde = ["dep:rmp-serde", "serde"]
postcard = ["dep:postcard", "serde"]
rkyv = ["dep:rkyv", "std", "model-no-usize", "model-no-map-string-key", "model-no-tuple", "model-no-cstring"]
serde_cbor = ["dep:serde_cbor", "serde", "model-no-128", "model-no-map"]
dlhn = ["dep:dlhn", "serde", "model-no-128", "model-no-map"]
bitcode = ["dep:bitcode", "model-no-128", "model-no-map", "serde"]
bitcode-derive = ["bitcode", "bitcode/derive"]

[dependencies]
musli = { path = "../musli", version = "0.0.75", default-features = false, optional = true, features = ["alloc"] }
musli-wire = { path = "../musli-wire", version = "0.0.75", default-features = false, features = ["alloc", "test"], optional = true }
musli-descriptive = { path = "../musli-descriptive", version = "0.0.75", default-features = false, features = ["alloc", "test"], optional = true }
musli-storage = { path = "../musli-storage", version = "0.0.75", default-features = false, features = ["alloc", "test"], optional = true }
musli-json = { path = "../musli-json", version = "0.0.75", default-features = false, features = ["alloc", "test",], optional = true }
musli-value = { path = "../musli-value", version = "0.0.75", default-features = false, features = ["alloc", "test"], optional = true }
musli-zerocopy = { path = "../musli-zerocopy", version = "0.0.75", default-features = false, features = ["alloc"], optional = true }
musli-macros = { path = "../musli-macros", version = "0.0.75", features = ["test"] }

anyhow = "1.0.75"
serde = { version = "1.0.188", default-features = false, optional = true, features = ["derive"] }
rand = { version = "0.8.5", default-features = false, features = ["alloc", "std_rng"] }
rmp-serde = { version = "1.1.2", optional = true }
bincode = { version = "1.3.3", default-features = false, optional = true }
serde_json = { version = "1.0.107", default-features = false, features = ["alloc", "float_roundtrip"], optional = true }
serde_cbor = { version = "0.11.2", default-features = false, features = ["alloc", "std"], optional = true }
dlhn = { version = "0.1.6", default-features = false, optional = true }
bitcode = { version = "0.5.0", default-features = false, optional = true }
rkyv = { version = "0.7.42", default-features = false, optional = true, features = ["alloc", "size_32", "validation", "strict"] }
postcard = { version = "1.0.8",  default-features = false, optional = true }
zerocopy = { version = "0.7.11", default-features = false, optional = true, features = ["byteorder", "derive"] }

[dev-dependencies]
musli = { path = "../musli", version = "0.0.75", default-features = false, features = ["alloc"] }
criterion = { version = "0.4.0", features = ["html_reports"] }
trybuild = "1.0.85"
bstr = "1.7.0"

[[bench]]
name = "comparison"
harness = false
