[package]
name = "musli-web-client-example"
edition = "2024"
publish = false

[dependencies]
musli-web = { path = "../..", features = ["yew021"] }
api = { package = "musli-web-api-example", path = "../api" }

yew = { version = "0.21.0", features = ["csr"] }
web-sys = "0.3.77"
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
